--- a/.github/workflows/label-pull-requests.yml
+++ b/.github/workflows/label-pull-requests.yml
@@ -40,6 +40,15 @@ jobs:
             invalid:
               path: .+
 
+            bottle unneeded:
+              path: Formula/.+
+              content: \n  (bottle :unneeded)\n
+
+            no ARM bottle:
+              path: Formula/.+
+              content: \n    sha256.* big_sur: +"[a-fA-F0-9]+"\n
+              missing_content: \n    sha256.* arm64_big_sur: +"[a-fA-F0-9]+"\n
+
       - name: Unlabel
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
