--- a/.github/workflows/label-pull-requests.yml
+++ b/.github/workflows/label-pull-requests.yml
@@ -64,8 +64,8 @@ jobs:
               path: Formula/.+
               content: \n  bottle do\n
               missing_content:
-                - \n    sha256.* x86_64_linux: +"[a-fA-F0-9]+"\n
-                - \n    sha256.* all: +"[a-fA-F0-9]+"\n
+                - '\n    sha256.* x86_64_linux: +"[a-fA-F0-9]+"\n'
+                - '\n    sha256.* all: +"[a-fA-F0-9]+"\n'
                 - depends_on :macos
 
             formula deprecated:
