--- a/.github/workflows/label-pull-requests.yml
+++ b/.github/workflows/label-pull-requests.yml
@@ -36,30 +36,30 @@ jobs:
         uses: ./label-pull-requests/
         with:
           def: |
-            invalid:
+            - label: invalid
               path: .+
 
-            workflows:
+            - label: workflows
               path: .github/workflows/.+
 
-            new formula:
+            - label: new formula
               status: added
               path: Formula/.+
 
-            marked for removal/rejection:
+            - label: marked for removal/rejection
               status: removed
               path: Formula/.+
 
-            bottle unneeded:
+            - label: bottle unneeded
               path: Formula/.+
               content: \n  (bottle :unneeded)\n
 
-            no ARM bottle:
+            - label: no ARM bottle
               path: Formula/.+
               content: '\n    sha256.* big_sur: +"[a-fA-F0-9]+"\n'
               missing_content: '\n    sha256.* arm64_big_sur: +"[a-fA-F0-9]+"\n'
 
-            no Linux bottle:
+            - label: no Linux bottle
               path: Formula/.+
               content: \n  bottle do\n
               missing_content:
@@ -67,15 +67,15 @@ jobs:
                 - '\n    sha256.* all: +"[a-fA-F0-9]+"\n'
                 - depends_on :macos
 
-            formula deprecated:
+            - label: formula deprecated
               path: Formula/.+
               content: \n  deprecate!.*\n
 
-            formula disabled:
+            - label: formula disabled
               path: Formula/.+
               content: \n  disable!.*\n
 
-            legacy:
+            - label: legacy
               path: Formula/.+@.+
               except:
                 - Formula/openssl@1.1.rb
@@ -83,96 +83,96 @@ jobs:
                 - Formula/python@3.9
                 - Formula/python-tk@3.9.rb
 
-            missing license:
+            - label: missing license
               path: Formula/.+
               missing_content: \n  license .+\n
 
-            deprecated license:
+            - label: deprecated license
               path: Formula/.+
               content: license .*"(GPL|LGPL|AGPL|GFDL)-[0-9].[0-9][+]?".*
 
-            go:
+            - label: go
               path: Formula/.+
               content: depends_on "go(@[0-9.]+)?"
 
-            haskell:
+            - label: haskell
               path: Formula/.+
               content: depends_on "(ghc|haskell-stack)(@[0-9.]+)?"
 
-            java:
+            - label: java
               path: Formula/.+
               content: depends_on "openjdk(@[0-9.]+)?"
 
-            linux-only:
+            - label: linux-only
               path: Formula/.+
               content: depends_on :linux
 
-            macos-only:
+            - label: macos-only
               path: Formula/.+
               content: depends_on :macos
 
-            lua:
+            - label: lua
               path: Formula/.+
               content: depends_on "(lua|luajit|luajit-openresty)(@[0-9.]+)?"
 
-            nodejs:
+            - label: nodejs
               path: Formula/.+
               content: depends_on "node(@[0-9.]+)?"
 
-            ocaml:
+            - label: ocaml
               path: Formula/.+
               content: depends_on "ocaml(@[0-9.]+)?"
 
-            perl:
+            - label: perl
               path: Formula/.+
               content: (depends_on|uses_from_macos) "perl(@[0-9.]+)?"
 
-            php:
+            - label: php
               path: Formula/.+
               content: (depends_on|uses_from_macos) "php(@[0-9.]+)?"
 
-            python:
+            - label: python
               path: Formula/.+
               content: (depends_on|uses_from_macos) "python(@[0-9.]+)?"
               missing_content: (depends_on|uses_from_macos) "python(@[0-9.]+)?" => \[?:(build|test)
 
-            ruby:
+            - label: ruby
               path: Formula/.+
               content: (depends_on|uses_from_macos) "ruby(@[0-9.]+)?"
 
-            rust:
+            - label: rust
               path: Formula/.+
               content: depends_on "rust(@[0-9.]+)?"
 
-            dotnet:
+            - label: dotnet
               path: Formula/.+
               content: depends_on "dotnet(@[0-9.]+)?"
 
-            swift:
+            - label: swift
               path: Formula/.+
               content: system "swift", "build"
 
-            CI-long-timeout:
+            - label: CI-long-timeout
               path: Formula/(boost|qt).rb
               keep_if_no_match: true
 
-            CI-build-dependents-from-source:
+            - label: CI-build-dependents-from-source
               path: Formula/(cabal-install|docbook-xsl|emscripten|erlang|ghc|go|ocaml|ocaml-findlib|ocaml-num|openjdk|rust).rb
               keep_if_no_match: true
 
-            CI-skip-recursive-dependents:
+            - label: CI-skip-recursive-dependents
               path: Formula/(gettext|openssl).rb
               keep_if_no_match: true
 
-            CI-linux-wheezy:
+            - label: CI-linux-wheezy
               path: Formula/(zlib|binutils).rb
               keep_if_no_match: true
 
-            CI-linux-self-hosted:
+            - label: CI-linux-self-hosted
               path: Formula/(gdbm|go|openssl@1.1|python@3.9|rust|sqlite).rb
               keep_if_no_match: true
 
-            bump-formula-pr:
+            - label: bump-formula-pr
               pr_body_content: Created with `brew bump-formula-pr`
 
       - name: Unlabel
